Testando implementação de Ingress para centralizar os microserviços

--- a/Base/Jogo/configmap.yaml
+++ b/Base/Jogo/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: jogo-config
+  namespace: jogo
 data:
   configValue: "valor-de-config-jogo"
   urlUsuario: "http://usuario-service"
