--- a/Base/Pagamento/secret.yaml
+++ b/Base/Pagamento/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: pagamento-secret
+  namespace: pagamento
 type: Opaque
 data:
   connectionString: cGF5bWVudG86c2VjcmV0LXNlbmhhLTEyMw==
