--- a/Base/Jogo/secret.yaml
+++ b/Base/Jogo/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: jogo-secret
+  namespace: jogo
 type: Opaque
 data:
   connectionString: bW9uZ29kYjovL2p1c3RfdW0tZXhlbXBsby1kZQ==
