--- a/Base/Pagamento/configmap.yaml
+++ b/Base/Pagamento/configmap.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: pagamento-config
+  namespace: pagamento
 data:
   configValue: "valor-de-config-pagamento"
