--- a/Base/Pagamento/deployment.yaml
+++ b/Base/Pagamento/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pagamento-deployment
+  namespace: pagamento
 spec:
   replicas: 2
   selector:
