--- a/Base/Pagamento/hpa.yaml
+++ b/Base/Pagamento/hpa.yaml
@@ -2,6 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: pagamento-hpa
+  namespace: pagamento
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
