--- a/Base/Usuario/configmap.yaml
+++ b/Base/Usuario/configmap.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: usuario-config
+  namespace: usuario
 data:
   configValue: "valor-de-config-usuario"
