--- a/Base/Usuario/hpa.yaml
+++ b/Base/Usuario/hpa.yaml
@@ -2,6 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: usuario-hpa
+  namespace: usuario
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
