--- a/Base/Usuario/secret.yaml
+++ b/Base/Usuario/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: usuario-secret
+  namespace: usuario
 type: Opaque
 data:
   connectionString: dXNlcjpwYXNzQDEyMy1leGVtcGxvLXVzdWFyaW8=
