--- a/Base/FCG_USUARIOS/service.yaml
+++ b/Base/FCG_USUARIOS/service.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: usuario-service
-  namespace: usuario
 spec:
   type: ClusterIP
   selector:
-    app: usuario
+    app: ms-usuario
   ports:
-    - port: 80
-      targetPort: 80
+    - protocol: TCP
+      port: 80      
+      targetPort: 8080 
